# agentic-ai-for-clm

./: .env.example  .gitignore  Makefile  PROJECT_STATUS.md  README.md  pyproject.toml  requirements.txt
configs/: system_config.yaml
configs/agents/: risk_agent.yaml
data/: README.md
docs/: ARCHITECTURE.md  SETUP.md
notebooks/: 01_getting_started.ipynb
src/: __init__.py  main.py
src/agents/: __init__.py  base.py  clause_agent.py  dependency_agent.py  obligation_agent.py  risk_agent.py
src/core/: __init__.py  config.py
tests/: __init__.py
tests/unit/: test_agents.py  test_config.py
thesis/proposal/: thesis_proposal.md
