[tool.poetry]
name = "agentic-clm"
version = "0.1.0"
description = "Multi-Agentic AI Systems for Contract Lifecycle Management"
authors = ["Trung Nguyen"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.0"
langgraph = "^0.0.40"
langfuse = "^2.0.0"
openai = "^1.10.0"
anthropic = "^0.18.0"
boto3 = "^1.34.0"  # AWS SDK for Textract
supabase = "^2.0.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
tiktoken = "^0.6.0"
pypdf = "^4.0.0"
python-docx = "^1.1.0"
pandas = "^2.2.0"
numpy = "^1.26.0"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pyyaml = "^6.0.1"
aiofiles = "^23.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
black = "^24.1.0"
ruff = "^0.2.0"
mypy = "^1.8.0"
ipython = "^8.21.0"
jupyter = "^1.0.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
